2005-12-05  John Sullivan  <sullivan@apple.com>

        Reviewed by Tim Omernick.

        - WebCore part of fix for 
        <rdar://problem/4365690> Find > Jump to Selection does nothing on plain-text documents (inc. source HTML)
        
        No behavioral changes here. This patch just eliminates the name "jumpToSelection" in favor of
        "centerSelectionInVisibleArea" to match WebKit and AppKit.

        * kwq/KWQKHTMLPart.h:
        eliminate jumpToSelection(); add centerSelectionInVisibleArea()

        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::findString):
        use centerSelectionInVisibleArea() instead of jumpToSelection()
        (KWQKHTMLPart::centerSelectionInVisibleArea):
        renamed from jumpToSelection
        (KWQKHTMLPart::advanceToNextMisspelling):
        use centerSelectionInVisibleArea() instead of jumpToSelection()

        * kwq/WebCoreBridge.h:
        eliminate jumpToSelection; add centerSelectionInVisibleArea
        * kwq/WebCoreBridge.mm:
        eliminate jumpToSelection. We had been implementing both jumpToSelection and
        centerSelectionInVisibleArea here, but jumpToSelection now has no more callers.

2005-12-05  Vicki Murley  <vicki@apple.com>

        Reviewed by John.
 
	- fix <rdar://problem/4363132> Regression: status bar shows wrong text when mousing over links 
	in wacky frameset at directory.apple.com

        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]): reuse point to work with nested frames; add the overflow clip to 
	accommodate any scrolling

2005-12-04  Eric Seidel  <eseidel@apple.com>

        Reviewed by ggaren.

        No additional test cases needed (or possible).

        Further dom/* cleanup, also removing extra forwarding headers
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5930

        * ForwardingHeaders/dom/dom2_views.h: Removed.
        * ForwardingHeaders/dom/dom_core.h: Removed.
        * ForwardingHeaders/dom/dom_doc.h: Removed.